--- a/exe/gui/GeoDmsGuiQt.qrc
+++ b/exe/gui/GeoDmsGuiQt.qrc
@@ -4,6 +4,7 @@
         <file>res/images/print.png</file>
         <file>res/images/save.png</file>
         <file>res/images/undo.png</file>
+		<file>res/images/GeoDmsGui-0.png</file>
         <file>res/images/default.txt</file>
     </qresource>
 </RCC>
