Added merged noto sans medium, arabic medium and math font as dmstext.ttf. Added merged font to GeoDmsGuiQt.qrc. Loaded font application wide. Treeview items now pick font using fontrole.

--- a/qtgui/exe/GeoDmsGuiQt.qrc
+++ b/qtgui/exe/GeoDmsGuiQt.qrc
@@ -54,5 +54,6 @@
         <file>res/images/right_arrow.png</file>
         <file>res/images/right_arrow_hover.png</file>
         <file>res/images/down_arrow_hover.png</file>
+        <file>res/fonts/dmstext.ttf</file>
     </qresource>
 </RCC>
