--- a/qtgui/exe/GeoDmsGuiQt.qrc
+++ b/qtgui/exe/GeoDmsGuiQt.qrc
@@ -70,5 +70,6 @@
         <file>res/images/TV_table_bw.bmp</file>
         <file>res/images/TV_unit_transparant_bw.bmp</file>
         <file>res/images/IconCalculationTimeOverview.bmp</file>
+        <file>res/images/DP_history.bmp</file>
     </qresource>
 </RCC>
