--- a/qtgui/exe/res/ui/DmsConfigOptionsWindow.ui
+++ b/qtgui/exe/res/ui/DmsConfigOptionsWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Config options</string>
   </property>
   <widget class="QLabel" name="lbl_title">
    <property name="geometry">
