--- a/qtgui/exe/res/ui/DmsLocalMachineOptionsWindow.ui
+++ b/qtgui/exe/res/ui/DmsLocalMachineOptionsWindow.ui
@@ -247,7 +247,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>240</y>
+     <y>272</y>
      <width>673</width>
      <height>16</height>
     </rect>
@@ -272,8 +272,8 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>230</y>
-     <width>181</width>
+     <y>262</y>
+     <width>201</width>
      <height>21</height>
     </rect>
    </property>
@@ -299,7 +299,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>260</y>
+     <y>292</y>
      <width>293</width>
      <height>25</height>
     </rect>
@@ -320,7 +320,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>290</y>
+     <y>322</y>
      <width>303</width>
      <height>25</height>
     </rect>
@@ -341,7 +341,7 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>260</y>
+     <y>292</y>
      <width>189</width>
      <height>25</height>
     </rect>
@@ -362,7 +362,7 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>290</y>
+     <y>322</y>
      <width>224</width>
      <height>25</height>
     </rect>
@@ -383,7 +383,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>350</y>
+     <y>382</y>
      <width>673</width>
      <height>16</height>
     </rect>
@@ -408,7 +408,7 @@
    <property name="geometry">
     <rect>
      <x>64</x>
-     <y>380</y>
+     <y>412</y>
      <width>551</width>
      <height>22</height>
     </rect>
@@ -436,7 +436,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>380</y>
+     <y>412</y>
      <width>40</width>
      <height>21</height>
     </rect>
@@ -455,7 +455,7 @@
    <property name="geometry">
     <rect>
      <x>630</x>
-     <y>380</y>
+     <y>412</y>
      <width>49</width>
      <height>21</height>
     </rect>
@@ -474,7 +474,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>420</y>
+     <y>452</y>
      <width>35</width>
      <height>21</height>
     </rect>
@@ -493,7 +493,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>340</y>
+     <y>372</y>
      <width>388</width>
      <height>21</height>
     </rect>
@@ -522,7 +522,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>470</y>
+     <y>502</y>
      <width>673</width>
      <height>16</height>
     </rect>
@@ -547,7 +547,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>460</y>
+     <y>492</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -576,7 +576,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>490</y>
+     <y>522</y>
      <width>172</width>
      <height>25</height>
     </rect>
@@ -655,9 +655,9 @@
   <widget class="QLineEdit" name="m_editor_input">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>110</x>
      <y>180</y>
-     <width>621</width>
+     <width>521</width>
      <height>25</height>
     </rect>
    </property>
@@ -666,7 +666,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>420</y>
+     <y>452</y>
      <width>107</width>
      <height>21</height>
     </rect>
@@ -679,6 +679,90 @@
    </property>
    <property name="text">
     <string>Current Value:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="m_pp_info">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>260</y>
+     <width>16</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="toolTip">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Example explanation on &lt;span style=&quot; font-weight:600;&quot;&gt;parallel processing&lt;/span&gt;.&lt;/p&gt;&lt;p&gt;What is it? How to use?&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>../images/DP_ValueInfo.bmp</normaloff>../images/DP_ValueInfo.bmp</iconset>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_applications">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>180</y>
+     <width>90</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>MS Shell Dlg 2</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Application:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="m_editor_parameters_input">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>210</y>
+     <width>241</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lbl_applications_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>210</y>
+     <width>90</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>MS Shell Dlg 2</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Parameters:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="m_set_editor_parameters">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>210</y>
+     <width>261</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Set default parameters for application</string>
    </property>
   </widget>
   <zorder>line</zorder>
@@ -713,6 +797,11 @@
   <zorder>m_sd_input</zorder>
   <zorder>m_editor_input</zorder>
   <zorder>lbl_current_flush_value</zorder>
+  <zorder>m_pp_info</zorder>
+  <zorder>lbl_applications</zorder>
+  <zorder>m_editor_parameters_input</zorder>
+  <zorder>lbl_applications_2</zorder>
+  <zorder>m_set_editor_parameters</zorder>
  </widget>
  <resources/>
  <connections/>
