--- a/qtgui/exe/res/ui/DmsEventLogSelection.ui
+++ b/qtgui/exe/res/ui/DmsEventLogSelection.ui
@@ -187,7 +187,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: green;</string>
+     <string notr="true">color: ForestGreen;</string>
     </property>
     <property name="text">
      <string>minor</string>
