--- a/qtgui/exe/res/ui/DmsGuiOptionsWindow.ui
+++ b/qtgui/exe/res/ui/DmsGuiOptionsWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DmsGuiOptionsWindow</class>
- <widget class="QDialog" name="DmsGuiOptionsWindow">
+ <class>Dialog</class>
+ <widget class="QDialog" name="Dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -26,35 +26,6 @@
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="3">
-      <widget class="QPushButton" name="m_start_color_button">
-       <property name="styleSheet">
-        <string notr="true">background-color:red;
-</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="2">
-      <widget class="QLabel" name="lbl_start">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Start:</string>
        </property>
       </widget>
      </item>
@@ -87,36 +58,32 @@
        </property>
       </widget>
      </item>
-     <item row="15" column="1" colspan="3">
-      <widget class="QLabel" name="lbl_table_statistics">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
+     <item row="13" column="3">
+      <widget class="QPushButton" name="m_start_color_button">
+       <property name="styleSheet">
+        <string notr="true">background-color:red;
+</string>
        </property>
-       <property name="text">
-        <string>Table/Statistics View</string>
-       </property>
-      </widget>
-     </item>
-     <item row="19" column="1" colspan="3">
-      <widget class="QLabel" name="lbl_empty">
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
-     <item row="21" column="1">
-      <widget class="QPushButton" name="m_ok">
+     <item row="13" column="2">
+      <widget class="QLabel" name="lbl_start">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="font">
         <font>
          <pointsize>10</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Ok</string>
+        <string>Start:</string>
        </property>
       </widget>
      </item>
@@ -143,39 +110,24 @@
        </property>
       </widget>
      </item>
-     <item row="14" column="2">
-      <widget class="QLabel" name="lbl_end">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
+     <item row="19" column="1" colspan="3">
+      <widget class="QLabel" name="lbl_empty">
        <property name="text">
-        <string>End:</string>
+        <string/>
        </property>
       </widget>
      </item>
-     <item row="21" column="2">
-      <widget class="QPushButton" name="m_cancel">
+     <item row="15" column="1" colspan="3">
+      <widget class="QLabel" name="lbl_table_statistics">
        <property name="font">
         <font>
          <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
-        <string>Cancel</string>
-       </property>
-      </widget>
-     </item>
-     <item row="21" column="3">
-      <widget class="QPushButton" name="m_undo">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Undo</string>
+        <string>Table/Statistics View</string>
        </property>
       </widget>
      </item>
@@ -202,6 +154,28 @@
        </property>
        <property name="text">
         <string>TreeView</string>
+       </property>
+      </widget>
+     </item>
+     <item row="14" column="2">
+      <widget class="QLabel" name="lbl_end">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>End:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="3">
+      <widget class="QPushButton" name="m_not_calculated_color_ti_button">
+       <property name="styleSheet">
+        <string notr="true">background-color:blue;</string>
+       </property>
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
@@ -254,28 +228,6 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="3">
-      <widget class="QPushButton" name="m_not_calculated_color_ti_button">
-       <property name="styleSheet">
-        <string notr="true">background-color:blue;</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="1" colspan="2">
-      <widget class="QLabel" name="lbl_background_color">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Background color:</string>
-       </property>
-      </widget>
-     </item>
      <item row="11" column="1" colspan="3">
       <widget class="Line" name="line_2">
        <property name="orientation">
@@ -291,6 +243,18 @@
        </property>
        <property name="text">
         <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="1" colspan="2">
+      <widget class="QLabel" name="lbl_background_color">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Background color:</string>
        </property>
       </widget>
      </item>
@@ -320,6 +284,17 @@
        </property>
       </widget>
      </item>
+     <item row="9" column="3">
+      <widget class="QPushButton" name="m_failed_color_ti_button">
+       <property name="styleSheet">
+        <string notr="true">background-color:red;
+</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
      <item row="9" column="2">
       <widget class="QLabel" name="lbl_failed">
        <property name="font">
@@ -332,16 +307,45 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="3">
-      <widget class="QPushButton" name="m_failed_color_ti_button">
-       <property name="styleSheet">
-        <string notr="true">background-color:red;
-</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
+     <item row="20" column="3">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QPushButton" name="m_ok">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Ok</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="m_cancel">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Cancel</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="m_undo">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Undo</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
