--- a/qtgui/exe/res/ui/DmsGuiOptionsWindow.ui
+++ b/qtgui/exe/res/ui/DmsGuiOptionsWindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>679</width>
-    <height>529</height>
+    <width>627</width>
+    <height>466</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>GUI options</string>
@@ -16,38 +22,7 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="1" column="0">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="16" column="1" colspan="3">
-      <widget class="Line" name="line_3">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="13" column="1">
-      <widget class="QLabel" name="lbl_default_classification_ramp_colors">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Default classification ramp colors          </string>
-       </property>
-      </widget>
-     </item>
-     <item row="14" column="3">
+     <item row="15" column="3">
       <widget class="QPushButton" name="m_end_color_button">
        <property name="styleSheet">
         <string notr="true">background-color:blue;
@@ -58,7 +33,7 @@
        </property>
       </widget>
      </item>
-     <item row="13" column="3">
+     <item row="14" column="3">
       <widget class="QPushButton" name="m_start_color_button">
        <property name="styleSheet">
         <string notr="true">background-color:red;
@@ -69,7 +44,18 @@
        </property>
       </widget>
      </item>
-     <item row="13" column="2">
+     <item row="13" column="3">
+      <widget class="QPushButton" name="m_background_color_button">
+       <property name="styleSheet">
+        <string notr="true">background-color:white;
+</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="14" column="2">
       <widget class="QLabel" name="lbl_start">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -87,47 +73,10 @@
        </property>
       </widget>
      </item>
-     <item row="17" column="1">
-      <widget class="QCheckBox" name="m_show_thousand_separator">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Show thousand seperator</string>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="3">
-      <widget class="QPushButton" name="m_background_color_button">
-       <property name="styleSheet">
-        <string notr="true">background-color:white;
-</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="19" column="1" colspan="3">
+     <item row="20" column="1" colspan="3">
       <widget class="QLabel" name="lbl_empty">
        <property name="text">
         <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="15" column="1" colspan="3">
-      <widget class="QLabel" name="lbl_table_statistics">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>Table/Statistics View</string>
        </property>
       </widget>
      </item>
@@ -143,7 +92,21 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="3">
+     <item row="16" column="1" colspan="3">
+      <widget class="QLabel" name="lbl_table_statistics">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Table/Statistics View</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1" colspan="3">
       <widget class="QLabel" name="lbl_treeview">
        <property name="font">
         <font>
@@ -157,29 +120,7 @@
        </property>
       </widget>
      </item>
-     <item row="14" column="2">
-      <widget class="QLabel" name="lbl_end">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>End:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="3">
-      <widget class="QPushButton" name="m_not_calculated_color_ti_button">
-       <property name="styleSheet">
-        <string notr="true">background-color:blue;</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="7" column="1">
+     <item row="8" column="1">
       <widget class="QCheckBox" name="m_show_state_colors_in_treeview">
        <property name="font">
         <font>
@@ -194,14 +135,29 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1" colspan="3">
-      <widget class="Line" name="line">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="8" column="3">
+      <widget class="QPushButton" name="m_not_calculated_color_ti_button">
+       <property name="styleSheet">
+        <string notr="true">background-color:blue;</string>
+       </property>
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
-     <item row="7" column="2">
+     <item row="15" column="2">
+      <widget class="QLabel" name="lbl_end">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>End:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="2">
       <widget class="QLabel" name="lbl_not_yet_calculated">
        <property name="font">
         <font>
@@ -213,7 +169,21 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="12" column="1" colspan="3">
+      <widget class="Line" name="line_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1" colspan="3">
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
       <widget class="QCheckBox" name="m_show_hidden_items">
        <property name="font">
         <font>
@@ -228,14 +198,7 @@
        </property>
       </widget>
      </item>
-     <item row="11" column="1" colspan="3">
-      <widget class="Line" name="line_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="3">
+     <item row="9" column="3">
       <widget class="QPushButton" name="m_valid_color_ti_button">
        <property name="styleSheet">
         <string notr="true">background-color:green;
@@ -246,19 +209,7 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="1" colspan="2">
-      <widget class="QLabel" name="lbl_background_color">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Background color:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="10" column="1" colspan="3">
+     <item row="11" column="1" colspan="3">
       <widget class="QLabel" name="lbl_mapview">
        <property name="font">
         <font>
@@ -272,7 +223,7 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="2">
+     <item row="9" column="2">
       <widget class="QLabel" name="lbl_valid">
        <property name="font">
         <font>
@@ -284,18 +235,19 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="3">
-      <widget class="QPushButton" name="m_failed_color_ti_button">
-       <property name="styleSheet">
-        <string notr="true">background-color:red;
-</string>
+     <item row="13" column="1" colspan="2">
+      <widget class="QLabel" name="lbl_background_color">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
        </property>
        <property name="text">
-        <string/>
+        <string>Background color:</string>
        </property>
       </widget>
      </item>
-     <item row="9" column="2">
+     <item row="10" column="2">
       <widget class="QLabel" name="lbl_failed">
        <property name="font">
         <font>
@@ -307,7 +259,49 @@
        </property>
       </widget>
      </item>
-     <item row="20" column="3">
+     <item row="10" column="3">
+      <widget class="QPushButton" name="m_failed_color_ti_button">
+       <property name="styleSheet">
+        <string notr="true">background-color:red;
+</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="1" colspan="3">
+      <widget class="Line" name="line_3">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="14" column="1">
+      <widget class="QLabel" name="lbl_default_classification_ramp_colors">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Default classification ramp colors</string>
+       </property>
+      </widget>
+     </item>
+     <item row="21" column="3">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="m_ok">
@@ -346,6 +340,31 @@
         </widget>
        </item>
       </layout>
+     </item>
+     <item row="1" column="1">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="18" column="1" colspan="2">
+      <widget class="QCheckBox" name="m_show_thousand_separator">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Show thousand seperator</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
